deployments/envoy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.17.1
        args:
        - -c
        - /etc/envoy/envoy-conf.yaml
        - -l
        - debug
        ports:
        - containerPort: 9001
        volumeMounts:
        - name: envoy-conf
          mountPath: /etc/envoy
      volumes:
      - name: envoy-conf
        configMap:
          name: envoy-conf
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-service1
  annotations:
    ad.datadoghq.com/service.check_names: |
      ["envoy"]
    ad.datadoghq.com/service.init_configs: |
      [{}]
    ad.datadoghq.com/service.instances: |
      [
        {
          "stats_url": "http://%%host%%:9901/stats"
        }
      ]
spec:
  selector:
    app: envoy
  ports:
  - name: http
    protocol: TCP
    port: 9901
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-service2
  annotations:
    ad.datadoghq.com/service.check_names: |
      ["openmetrics"]
    ad.datadoghq.com/service.init_configs: |
      [{}]
    ad.datadoghq.com/service.instances: |
      [
        {
          "prometheus_url": "http://%%host%%:9901/stats/prometheus",
          "namespace": "nokamoto",
          "metrics": ["*"]
        }
      ]
spec:
  selector:
    app: envoy
  ports:
  - name: http
    protocol: TCP
    port: 9901
